Enhance Cart component with responsive design adjustments, including updated styles for product titles and buttons. Improve layout for better mobile display and ensure consistent spacing in item details.

--- a/app/cart/cart.css
+++ b/app/cart/cart.css
@@ -2,3 +2,8 @@
   /* background-color: var(--background1); */
   outline: 3px solid var(--background1);
 }
+@media (max-width: 576px) {
+  .product-title {
+    font-size: 1.3rem !important;
+  }
+}
